--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+
 /node_modules
 /.pnp
 .pnp.*
@@ -14,6 +15,8 @@
 /coverage
 
 # next.js
+/.kiro/
+.kiro/
 /.next/
 /out/
 
