--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/x-data-grid": "^7.22.2",
     "next": "15.5.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "simple-peer": "^9.11.1",
+    "socket.io-client": "^4.8.1"
   }
 }
